--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"iconify-icon": "^1.0.8"
+		"iconify-icon": "^1.0.8",
+		"svelte-typewriter": "^3.2.3"
 	}
 }
